# AssetoServerGui

./: README.md  app_config.yml.template  pyproject.toml  pytest.ini  requirements-dev.txt  run.bat
src/ac_server_gui/: __main__.py  main_window.py
src/ac_server_gui/core/: config.py  content_scanner.py  extra_cfg_generator.py  log_parser.py  network_info.py  preset_config.py  preset_manager.py  server_process.py
src/ac_server_gui/widgets/: config_editor.py  log_viewer.py  preset_picker.py  status_panel.py
src/ac_server_gui/widgets/tabs/: assists_tab.py  dynamic_track_tab.py  entry_list_tab.py  extra_tab.py  general_tab.py  network_tab.py  rules_tab.py  sessions_tab.py  track_cars_tab.py  weather_tab.py
tests/: conftest.py  test_config_settings.py  test_extra_cfg_generator.py  test_log_parser.py  test_main_window_smoke.py  test_network_info.py  test_preset_manager.py  test_server_process.py  test_sun_angle.py  test_track_cars_tab.py
tests/integration/: test_server_launch.py
